--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -25,11 +25,21 @@ jobs:
           ignore-unfixed: true
           exit-code: '0'  # Do not fail yet
 
-      - name: Upload Trivy Report
-        uses: actions/upload-artifact@v4
+      - name: Run Trivy and save report
+        uses: aquasecurity/trivy-action@master
         with:
-          name: trivy-report
-          path: trivy-report.json
+          scan-type: fs
+          scan-ref: .
+          severity: HIGH,CRITICAL
+          format: 'template'
+          output: trivy-results.sarif
+          ignore-unfixed: true
+          exit-code: '0'  # Do not fail yet
+
+      - name: Upload Trivy Report
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: 'trivy-results.sarif'
 
       - name: Fail job if HIGH or CRITICAL vulnerabilities are found
         run: |
