--- a/.github/workflows/php-stan.yaml
+++ b/.github/workflows/php-stan.yaml
@@ -16,6 +16,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: show current directories 
+        # run: cd $SCAN_PATH && ls -lah 
         run: cd $SCAN_PATH && ls -lah 
 
       - name: Download PHPStan PHAR
@@ -25,4 +26,4 @@ jobs:
 
       - name: Run PHPStan on /php directory
         run: |
-          ./phpstan.phar analyse $SCAN_PATH /php --level=5
+          ./phpstan.phar analyse /php --level=5
