--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -36,10 +36,10 @@ jobs:
           ignore-unfixed: true
           exit-code: '0'  # Do not fail yet
 
-      - name: Upload Trivy Report
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: 'trivy-results.sarif'
+#      - name: Upload Trivy Report
+#        uses: github/codeql-action/upload-sarif@v3
+#        with:
+#          sarif_file: 'trivy-results.sarif'
 
       - name: Fail job if HIGH or CRITICAL vulnerabilities are found
         run: |
