--- a/.github/workflows/php-stan.yaml
+++ b/.github/workflows/php-stan.yaml
@@ -24,4 +24,4 @@ jobs:
 
       - name: Run PHPStan on /php directory
         run: |
-          ./phpstan.phar analyse php/* --level=5 --output=github
+          ./phpstan.phar analyse php/* --level=5 --error-format=github
