adding on workflow_call

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -18,8 +18,8 @@ jobs:
         run: cd $SCAN_PATH && docker build . --tag "docker-tag"
 
   job2:
-    uses: abook-presidio/php-trivy/.github/workflows/trivy.yml@main
+    uses: abook-presidio/php-trivy/.github/workflows/trivy.yml@onAction
 
   job3:
-    uses: abook-presidio/php-trivy/.github/workflows/php-stan.yml@main
+    uses: abook-presidio/php-trivy/.github/workflows/php-stan.yml@oneAction
 
