adding additional permissions

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -5,6 +5,10 @@ on:
     branches: [oneAction]
   pull_request:
 
+permissions:
+  actions: read
+  security-events: write
+
 jobs:
   job1:
     runs-on: ubuntu-latest
