--- a/.github/workflows/php-mal.yaml
+++ b/.github/workflows/php-mal.yaml
@@ -7,9 +7,9 @@ php-malware:
    run:
      shell: bash
 
-on:
-  push:
-    branches: [ "main" ]
+# on:
+#   push:
+#    branches: [ "main" ]
 permissions:
   contents: read
  
