removing trivy from oneAction

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -22,8 +22,8 @@ jobs:
       - name: Build the Docker image
         run: cd $SCAN_PATH && docker build . --tag "docker-tag"
 
-  job2:
-    uses: abook-presidio/php-trivy/.github/workflows/trivy.yml@oneAction
+#  job2:
+#    uses: abook-presidio/php-trivy/.github/workflows/trivy.yml@oneAction
 
   job3:
     uses: abook-presidio/php-trivy/.github/workflows/php-stan.yml@oneAction
