adding oneAction action to main branch trigger

--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -2,7 +2,7 @@ name: Call multiple workflows from separate files
 
 on:
   push:
-    branches: [oneAction]
+    branches: [main]
   pull_request:
 
 permissions:
